# Chromasound-Updater

./: .gitignore  CMakeLists.txt  chromasound.cpp  chromasound.h  filedownloader.cpp  filedownloader.h  gpio.cpp  gpio.h  linuxserial.cpp  linuxserial.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  posixserial.cpp  posixserial.h  programmer.cpp  programmer.h  resources.qrc  serial.cpp  serial.h  stk500v2.cpp  stk500v2.h  windowsserial.cpp  windowsserial.h
resources/: chromasound-updater.icns  chromasound-updater.rc
unix_install/: ChromasoundUpdater.desktop
